--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue2-auth-social-media</title>
+    <title>Vue Auth Social media</title>
+    <base href="/vue2-auth-social-media/">
   </head>
   <body>
     <div id="app"></div>
